--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
                 android:layout_centerInParent="true"/>
 
         <com.shiorin.iroiroDrawing.CanvasView
-
+                android:background="@color/colorAccent"
                 android:id="@+id/canvas_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
