--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,7 @@
                 app:srcCompat="@android:drawable/ic_menu_delete"/>
 
         <TextureView
+                android:id="@+id/cameraView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_above="@+id/center_view"/>
