--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,8 +13,9 @@
             tools:layout_editor_absoluteX="0dp" android:orientation="horizontal">
 
         <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/center_view">
 
         <TextureView
                 android:id="@+id/cameraView"
@@ -29,7 +30,6 @@
                 android:layout_centerInParent="true"/>
 
         <com.shiorin.iroiroDrawing.CanvasView
-                android:background="@color/colorAccent"
                 android:id="@+id/canvas_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
