--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,18 @@
     <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent" tools:layout_editor_absoluteY="0dp"
-            tools:layout_editor_absoluteX="0dp">
+            tools:layout_editor_absoluteX="0dp" android:orientation="horizontal">
+
+        <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/center_view">
+
+        <TextureView
+                android:id="@+id/cameraView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
 
         <View
                 android:id="@+id/center_view"
@@ -32,6 +43,10 @@
                 android:layout_alignBottom="@+id/canvas_view"
                 app:srcCompat="@android:drawable/ic_menu_delete"/>
 
+
+
     </RelativeLayout>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
