--- a/app/src/main/res/drawable/border.xml
+++ b/app/src/main/res/drawable/border.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:shape="rectangle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+    <stroke
+        android:width="3dp"
+        android:color="@color/write"/>
 
-</selector>
+</shape>
