枠組みがなくても落ちなくなったので、削除した

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,8 +15,7 @@
         <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/center_view"
-                android:background="@drawable/border">
+                android:layout_above="@+id/center_view">
 
         <TextureView
                 android:id="@+id/cameraView"
@@ -28,7 +27,7 @@
         <View
                 android:id="@+id/center_view"
                 android:layout_width="wrap_content"
-                android:layout_height="10dp"
+                android:layout_height="0dp"
                 android:layout_centerInParent="true"/>
 
         <com.shiorin.iroiroDrawing.CanvasView
